<resources>
    <string name="app_name">Калькулятор</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_dot">.</string>
    <string name="btn_equally">=</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_divide">/</string>
    <string name="btn_multiply">x</string>
    <string name="btn_delete">Очистить результат</string>
    <string name="text_calculation"> </string>
    <string name="string_text_result"> </string>


    <string name="material_light">Material light</string>
    <string name="material_dark">Material dark</string>
    <string name="btn_settings">Настройки темы</string>
    <string name="text_settings">Настройки темы</string>


</resources>