<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_7"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_8"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_9"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/button_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_divide"
            android:textSize="@dimen/btn_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_4"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_5"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_6"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_multiply"
            android:textSize="@dimen/btn_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_1"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_2"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_3"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_minus"
            android:textSize="@dimen/btn_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_0"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_dot"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/button_equally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_equally"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:text="@string/btn_plus"
            android:textSize="@dimen/btn_text_size" />
    </LinearLayout>

</LinearLayout>